test/analyzer/inputs/invalid/multi-decs.yah
rabbit is 5
rabbit is "string"
